tests/ui/generic_impl.gopp
package main

// generic impls + compound assignment: error paths.

enum Box[T] {
    Full(v T)
}

behavior Shower {
    Show(self) string
}

impl Shower for Box[X] { //~ ERROR impl for Box must use its type parameters in order: impl Shower for Box[T]
    Show(self) string {
        return "x"
    }
}

impl Shower for Box { //~ ERROR impl for generic Box needs its type parameters: impl Shower for Box[T]
    Show(self) string {
        return "y"
    }
}

type Plain struct {
    N int
}

impl Shower for Plain[T] { //~ ERROR Plain is not generic
    Show(self) string {
        return "p"
    }
}

func main() {
    p := Plain{N: 1}
    p += p //~ ERROR invalid operation: Plain += (no operator impl)
    n := 1
    n += 2 // still fine: numerics need no impl
    println(n)
}

